--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +32,10 @@
     <title>React App</title>
   </head>
   <body>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="sendForm"></div>
+    <div id="cartOverlay"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
